# module_init

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
app/: app_modules.h  main.c
app/features/: CMakeLists.txt  camera.module  camera_mod.c  camera_mod.h  gps.module  gps_mod.c  gps_mod.h  imu.module  imu_mod.c  imu_mod.h  wifi.module  wifi_mod.c  wifi_mod.h  zlmedia.module  zlmedia_mod.c  zlmedia_mod.h
cmake/: AppCoreConfig.cmake.in
core/: sys_channel.c  sys_channel.h  sys_component.c  sys_component.h  sys_core.c  sys_core.h  sys_event.c  sys_event.h  sys_internal.h  sys_log.c  sys_log.h  sys_runtime.c  sys_runtime.h  sys_service.c  sys_service.h  sys_thread.c  sys_thread.h  sys_types.c  sys_types.h  sys_version.h.in
docs/: architecture.md  build.md  module.module.example  project-memory.md  testing-guide.md
tests/: CMakeLists.txt  test_camera_rollback.c  test_channel.c  test_channel_stress.c  test_common.h  test_event.c  test_event_shutdown.c  test_install.cmake.in  test_lifecycle.c  test_lifecycle_failure.c  test_lifecycle_optional.c  test_lifecycle_start_failure.c  test_log_types.c  test_manifest.py  test_service.c  test_thread_runtime.c
tests/install_consumer/: CMakeLists.txt  main.c
tools/: Kconfig  ParseConfig.cmake  ci.sh  defconfig  menuconfig.py
